fixed footer on mobile view

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ footer{
     font-size: 1.2rem;
     height: 5vh;
     p{
-        text-align: center
+        text-align: center;
     }
 }
 
@@ -128,7 +128,8 @@ footer{
         grid-template-rows: repeat(4,7rem);
     }
     footer{
-        height: 12vh;
+        position: static;
+        height: 10vh;
     }
 }
 
@@ -149,7 +150,8 @@ footer{
         }
     }
     footer{
-        height: 12vh;
+        height: 10vh;
+        position: static;
     }
 }
 
